# rust-esp32-embedded-sdmmc

./: README.md
examples/esp-hal/: Cargo.toml  LICENSE-MIT  README.md  sdkconfig.debug
examples/esp-hal/src/: main.rs
