[package]
name = "esp-hal-example"
version = "0.1.0"
authors = ["Сырцев Вадим Игоревич <syrtcevvi@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
exclusive = []
shared = []

[dependencies]
embedded-hal-bus = "0.2.0"
embedded-sdmmc = "0.8.0"
esp-backtrace = { version = "0.14.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = ["esp32", "embedded-hal-02"] }
esp-println = { version = "0.11.0", features = ["esp32", "log"] }
log = { version = "0.4.22" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
